test/parser/good/while_true.ks
// TODO: fix this

int main()
{
    while ( true ) { continue; }

    return 4;
}
