test/parser/bad/bad_call_syntax.ks
int main()
{
    return foo( 1, 2;
}
